test/tests/errors/error-rhv-var.sm
// true
// false
/**/
/**/

program {
    proc x(y) {
        output y;
    }
    var y = x;
}